--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
 		    <artifactId>mongo-java-driver</artifactId>
 		    <version>3.12.3</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.googlecode.soundlibs</groupId>
+		    <artifactId>mp3spi</artifactId>
+		    <version>1.9.5-1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
